lib/src/bindings_pi.dart


  int pthread_getschedparam(
    int __target_thread,
    ffi.Pointer<ffi.Int32> __policy,
    ffi.Pointer<sched_param> __param,
  ) {
    _pthread_getschedparam ??= _dylib.lookupFunction<_c_pthread_getschedparam,
        _dart_pthread_getschedparam>('pthread_getschedparam');
    return _pthread_getschedparam(
      __target_thread,
      __policy,
      __param,
    );
  }

  _dart_pthread_getschedparam _pthread_getschedparam;

  int pthread_setschedprio(
    int __target_thread,
    int __prio,
  ) {
    _pthread_setschedprio ??= _dylib.lookupFunction<_c_pthread_setschedprio,
        _dart_pthread_setschedprio>('pthread_setschedprio');
    return _pthread_setschedprio(
      __target_thread,
      __prio,
    );
  }

  _dart_pthread_setschedprio _pthread_setschedprio;

  int pthread_once(
    ffi.Pointer<ffi.Int32> __once_control,
    ffi.Pointer<ffi.NativeFunction<_typedefC_3>> __init_routine,
  ) {
    _pthread_once ??= _dylib
        .lookupFunction<_c_pthread_once, _dart_pthread_once>('pthread_once');
    return _pthread_once(
      __once_control,
      __init_routine,
    );
  }

  _dart_pthread_once _pthread_once;

  int pthread_setcancelstate(
    int __state,
    ffi.Pointer<ffi.Int32> __oldstate,
  ) {
    _pthread_setcancelstate ??= _dylib.lookupFunction<_c_pthread_setcancelstate,
        _dart_pthread_setcancelstate>('pthread_setcancelstate');
    return _pthread_setcancelstate(
      __state,
      __oldstate,
    );
  }

  _dart_pthread_setcancelstate _pthread_setcancelstate;

  int pthread_setcanceltype(
    int __type,
    ffi.Pointer<ffi.Int32> __oldtype,
  ) {
    _pthread_setcanceltype ??= _dylib.lookupFunction<_c_pthread_setcanceltype,
        _dart_pthread_setcanceltype>('pthread_setcanceltype');
    return _pthread_setcanceltype(
      __type,
      __oldtype,
    );
  }

  _dart_pthread_setcanceltype _pthread_setcanceltype;

  int pthread_cancel(
    int __th,
  ) {
    _pthread_cancel ??=
        _dylib.lookupFunction<_c_pthread_cancel, _dart_pthread_cancel>(
            'pthread_cancel');
    return _pthread_cancel(
      __th,
    );
  }

  _dart_pthread_cancel _pthread_cancel;

  void pthread_testcancel() {
    _pthread_testcancel ??=
        _dylib.lookupFunction<_c_pthread_testcancel, _dart_pthread_testcancel>(
            'pthread_testcancel');
    return _pthread_testcancel();
  }

  _dart_pthread_testcancel _pthread_testcancel;

  void __pthread_register_cancel(
    ffi.Pointer<__pthread_unwind_buf_t> __buf,
  ) {
    ___pthread_register_cancel ??= _dylib.lookupFunction<
        _c___pthread_register_cancel,
        _dart___pthread_register_cancel>('__pthread_register_cancel');
    return ___pthread_register_cancel(
      __buf,
    );
  }

  _dart___pthread_register_cancel ___pthread_register_cancel;

  void __pthread_unregister_cancel(
    ffi.Pointer<__pthread_unwind_buf_t> __buf,
  ) {
    ___pthread_unregister_cancel ??= _dylib.lookupFunction<
        _c___pthread_unregister_cancel,
        _dart___pthread_unregister_cancel>('__pthread_unregister_cancel');
    return ___pthread_unregister_cancel(
      __buf,
    );
  }

  _dart___pthread_unregister_cancel ___pthread_unregister_cancel;

  void __pthread_unwind_next(
    ffi.Pointer<__pthread_unwind_buf_t> __buf,
  ) {
    ___pthread_unwind_next ??= _dylib.lookupFunction<_c___pthread_unwind_next,
        _dart___pthread_unwind_next>('__pthread_unwind_next');
    return ___pthread_unwind_next(
      __buf,
    );
  }

  _dart___pthread_unwind_next ___pthread_unwind_next;

  int __sigsetjmp(
    ffi.Pointer<__jmp_buf_tag> __env,
    int __savemask,
  ) {
    ___sigsetjmp ??=
        _dylib.lookupFunction<_c___sigsetjmp, _dart___sigsetjmp>('__sigsetjmp');
    return ___sigsetjmp(
      __env,
      __savemask,
    );
  }

  _dart___sigsetjmp ___sigsetjmp;

  int pthread_spin_init(
    ffi.Pointer<ffi.Int32> __lock,
    int __pshared,
  ) {
    _pthread_spin_init ??=
        _dylib.lookupFunction<_c_pthread_spin_init, _dart_pthread_spin_init>(
            'pthread_spin_init');
    return _pthread_spin_init(
      __lock,
      __pshared,
    );
  }

  _dart_pthread_spin_init _pthread_spin_init;

  int pthread_spin_destroy(
    ffi.Pointer<ffi.Int32> __lock,
  ) {
    _pthread_spin_destroy ??= _dylib.lookupFunction<_c_pthread_spin_destroy,
        _dart_pthread_spin_destroy>('pthread_spin_destroy');
    return _pthread_spin_destroy(
      __lock,
    );
  }

  _dart_pthread_spin_destroy _pthread_spin_destroy;

  int pthread_spin_lock(
    ffi.Pointer<ffi.Int32> __lock,
  ) {
    _pthread_spin_lock ??=
        _dylib.lookupFunction<_c_pthread_spin_lock, _dart_pthread_spin_lock>(
            'pthread_spin_lock');
    return _pthread_spin_lock(
      __lock,
    );
  }

  _dart_pthread_spin_lock _pthread_spin_lock;

  int pthread_spin_trylock(
    ffi.Pointer<ffi.Int32> __lock,
  ) {
    _pthread_spin_trylock ??= _dylib.lookupFunction<_c_pthread_spin_trylock,
        _dart_pthread_spin_trylock>('pthread_spin_trylock');
    return _pthread_spin_trylock(
      __lock,
    );
  }

  _dart_pthread_spin_trylock _pthread_spin_trylock;

  int pthread_spin_unlock(
    ffi.Pointer<ffi.Int32> __lock,
  ) {
    _pthread_spin_unlock ??= _dylib.lookupFunction<_c_pthread_spin_unlock,
        _dart_pthread_spin_unlock>('pthread_spin_unlock');
    return _pthread_spin_unlock(
      __lock,
    );
  }

  _dart_pthread_spin_unlock _pthread_spin_unlock;

  int pthread_key_create(
    ffi.Pointer<ffi.Uint32> __key,
    ffi.Pointer<ffi.NativeFunction<_typedefC_5>> __destr_function,
  ) {
    _pthread_key_create ??=
        _dylib.lookupFunction<_c_pthread_key_create, _dart_pthread_key_create>(
            'pthread_key_create');
    return _pthread_key_create(
      __key,
      __destr_function,
    );
  }

  _dart_pthread_key_create _pthread_key_create;

  int pthread_key_delete(
    int __key,
  ) {
    _pthread_key_delete ??=
        _dylib.lookupFunction<_c_pthread_key_delete, _dart_pthread_key_delete>(
            'pthread_key_delete');
    return _pthread_key_delete(
      __key,
    );
  }

  _dart_pthread_key_delete _pthread_key_delete;

  ffi.Pointer<ffi.Void> pthread_getspecific(
    int __key,
  ) {
    _pthread_getspecific ??= _dylib.lookupFunction<_c_pthread_getspecific,
        _dart_pthread_getspecific>('pthread_getspecific');
    return _pthread_getspecific(
      __key,
    );
  }

  _dart_pthread_getspecific _pthread_getspecific;

  int pthread_setspecific(
    int __key,
    ffi.Pointer<ffi.Void> __pointer,
  ) {
    _pthread_setspecific ??= _dylib.lookupFunction<_c_pthread_setspecific,
        _dart_pthread_setspecific>('pthread_setspecific');
    return _pthread_setspecific(
      __key,
      __pointer,
    );
  }

  _dart_pthread_setspecific _pthread_setspecific;

  int pthread_getcpuclockid(
    int __thread_id,
    ffi.Pointer<ffi.Int32> __clock_id,
  ) {
    _pthread_getcpuclockid ??= _dylib.lookupFunction<_c_pthread_getcpuclockid,
        _dart_pthread_getcpuclockid>('pthread_getcpuclockid');
    return _pthread_getcpuclockid(
      __thread_id,
      __clock_id,
    );
  }

  _dart_pthread_getcpuclockid _pthread_getcpuclockid;

  int pthread_atfork(
    ffi.Pointer<ffi.NativeFunction<_typedefC_6>> __prepare,
    ffi.Pointer<ffi.NativeFunction<_typedefC_7>> __parent,
    ffi.Pointer<ffi.NativeFunction<_typedefC_8>> __child,
  ) {
    _pthread_atfork ??=
        _dylib.lookupFunction<_c_pthread_atfork, _dart_pthread_atfork>(
            'pthread_atfork');
    return _pthread_atfork(
      __prepare,
      __parent,
      __child,
    );
  }

  _dart_pthread_atfork _pthread_atfork;

  int gpioInitialise() {
    _gpioInitialise ??=
        _dylib.lookupFunction<_c_gpioInitialise, _dart_gpioInitialise>(
            'gpioInitialise');
    return _gpioInitialise();
  }

  _dart_gpioInitialise _gpioInitialise;

  void gpioTerminate() {
    _gpioTerminate ??= _dylib
        .lookupFunction<_c_gpioTerminate, _dart_gpioTerminate>('gpioTerminate');
    return _gpioTerminate();
  }

  _dart_gpioTerminate _gpioTerminate;

  int gpioSetMode(
    int gpio,
    int mode,
  ) {
    _gpioSetMode ??=
        _dylib.lookupFunction<_c_gpioSetMode, _dart_gpioSetMode>('gpioSetMode');
    return _gpioSetMode(
      gpio,
      mode,
    );
  }

  _dart_gpioSetMode _gpioSetMode;

  int gpioGetMode(
    int gpio,
  ) {
    _gpioGetMode ??=
        _dylib.lookupFunction<_c_gpioGetMode, _dart_gpioGetMode>('gpioGetMode');
    return _gpioGetMode(
      gpio,
    );
  }

  _dart_gpioGetMode _gpioGetMode;

  int gpioSetPullUpDown(
    int gpio,
    int pud,
  ) {
    _gpioSetPullUpDown ??=
        _dylib.lookupFunction<_c_gpioSetPullUpDown, _dart_gpioSetPullUpDown>(
            'gpioSetPullUpDown');
    return _gpioSetPullUpDown(
      gpio,
      pud,
    );
  }

  _dart_gpioSetPullUpDown _gpioSetPullUpDown;

  int gpioRead(
    int gpio,
  ) {
    _gpioRead ??=
        _dylib.lookupFunction<_c_gpioRead, _dart_gpioRead>('gpioRead');
    return _gpioRead(
      gpio,
    );
  }

  _dart_gpioRead _gpioRead;

  int gpioWrite(
    int gpio,
    int level,
  ) {
    _gpioWrite ??=
        _dylib.lookupFunction<_c_gpioWrite, _dart_gpioWrite>('gpioWrite');
    return _gpioWrite(
      gpio,
      level,
    );
  }

  _dart_gpioWrite _gpioWrite;

  int gpioPWM(
    int user_gpio,
    int dutycycle,
  ) {
    _gpioPWM ??= _dylib.lookupFunction<_c_gpioPWM, _dart_gpioPWM>('gpioPWM');
    return _gpioPWM(
      user_gpio,
      dutycycle,
    );
  }

  _dart_gpioPWM _gpioPWM;

  int gpioGetPWMdutycycle(
    int user_gpio,
  ) {
    _gpioGetPWMdutycycle ??= _dylib.lookupFunction<_c_gpioGetPWMdutycycle,
        _dart_gpioGetPWMdutycycle>('gpioGetPWMdutycycle');
    return _gpioGetPWMdutycycle(
      user_gpio,
    );
  }

  _dart_gpioGetPWMdutycycle _gpioGetPWMdutycycle;

  int gpioSetPWMrange(
    int user_gpio,
    int range,
  ) {
    _gpioSetPWMrange ??=
        _dylib.lookupFunction<_c_gpioSetPWMrange, _dart_gpioSetPWMrange>(
            'gpioSetPWMrange');
    return _gpioSetPWMrange(
      user_gpio,
      range,
    );
  }

  _dart_gpioSetPWMrange _gpioSetPWMrange;

  int gpioGetPWMrange(
    int user_gpio,
  ) {
    _gpioGetPWMrange ??=
        _dylib.lookupFunction<_c_gpioGetPWMrange, _dart_gpioGetPWMrange>(
            'gpioGetPWMrange');
    return _gpioGetPWMrange(
      user_gpio,
    );
  }

  _dart_gpioGetPWMrange _gpioGetPWMrange;

  int gpioGetPWMrealRange(
    int user_gpio,
  ) {
    _gpioGetPWMrealRange ??= _dylib.lookupFunction<_c_gpioGetPWMrealRange,
        _dart_gpioGetPWMrealRange>('gpioGetPWMrealRange');
    return _gpioGetPWMrealRange(
      user_gpio,
    );
  }

  _dart_gpioGetPWMrealRange _gpioGetPWMrealRange;

  int gpioSetPWMfrequency(
    int user_gpio,
    int frequency,
  ) {
    _gpioSetPWMfrequency ??= _dylib.lookupFunction<_c_gpioSetPWMfrequency,
        _dart_gpioSetPWMfrequency>('gpioSetPWMfrequency');
    return _gpioSetPWMfrequency(
      user_gpio,
      frequency,
    );
  }

  _dart_gpioSetPWMfrequency _gpioSetPWMfrequency;

  int gpioGetPWMfrequency(
    int user_gpio,
  ) {
    _gpioGetPWMfrequency ??= _dylib.lookupFunction<_c_gpioGetPWMfrequency,
        _dart_gpioGetPWMfrequency>('gpioGetPWMfrequency');
    return _gpioGetPWMfrequency(
      user_gpio,
    );
  }

  _dart_gpioGetPWMfrequency _gpioGetPWMfrequency;

  int gpioServo(
    int user_gpio,
    int pulsewidth,
  ) {
    _gpioServo ??=
        _dylib.lookupFunction<_c_gpioServo, _dart_gpioServo>('gpioServo');
    return _gpioServo(
      user_gpio,
      pulsewidth,
    );
  }

  _dart_gpioServo _gpioServo;

  int gpioGetServoPulsewidth(
    int user_gpio,
  ) {
    _gpioGetServoPulsewidth ??= _dylib.lookupFunction<_c_gpioGetServoPulsewidth,
        _dart_gpioGetServoPulsewidth>('gpioGetServoPulsewidth');
    return _gpioGetServoPulsewidth(
      user_gpio,
    );
  }

  _dart_gpioGetServoPulsewidth _gpioGetServoPulsewidth;
